--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site settings
 title: Miae Kim
-email: miaekim@live.com
+email: miae (at) purdue (dot) edu
 description: > # this means to ignore newlines until "baseurl:"
   Studying Decision Making Multi-Agent-System, Machine Learning
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://miaekim.com" # the base hostname & protocol for your site
+url: "http://web.ics.purdue.edu/~miae" # the base hostname & protocol for your site
 twitter_username: MiaeKimKR
 github_username:  miaekim
 
